<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Freecalling</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mobileverification">Mobileverification</string>
    <string name="title_activity_applicationmenu">Applicationmenu</string>
    <string name="title_activity_grid_view">GridViewActivity</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_sendsms">Sendsms</string>
    <string name="title_activity_contactlist">Contactlist</string>
    <string name="title_activity_smslist">Smslist</string>
    <string name="title_activity_add_new_contact">AddNewContact</string>
    <string name="title_activity_calllist">Calllist</string>
    <string name="title_activity_loglist">Loglist</string>
    <string name="title_activity_logdetail">Logdetail</string>
    <string name="title_activity_notificationreciver">Notificationreciver</string>
    <string name="title_activity_notificationactivity">Notificationactivity</string>
    <string name="title_activity_jsonhandler">Jsonhandler</string>
    <string name="title_activity_tabhostactivity">Tabhostactivity</string>
    <string name="title_activity_server">Server</string>
    <string name="title_activity_createnotificationactivity">Createnotificationactivity</string>
    <string name="title_activity_listener">Listener</string>
    <string name="title_activity_mystatus">Mystatus</string>
    <string name="title_activity_staticactivity">Staticactivity</string>
    <string name="title_activity_blocklist">Blocklist</string>
    <string name="title_activity_locationfinder">Locationfinder</string>
    <string name="title_activity_messagesender">Messagesender</string>
    <string name="title_activity_messageserver">Messageserver</string>
    <string name="title_activity_audiorecord">Audiorecord</string>
    <string name="title_activity_audio_record">AudioRecord</string>
    <string name="title_activity_call">Call</string>
    <string name="title_activity_someonecalling">Someonecalling</string>
    <string name="title_activity_dialer">Dialer</string>
    <string name="title_activity_viewactivity">Viewactivity</string>
    <string name="title_activity_newtask">Newtask</string>
   
    
   
    <string name="profile_header">Lets get introduced.</string>
 	<string name="user_name">User Name</string>
 	<string name="pass">Password</string>
 	<string name="conf_pass">Conform Password</string>
 	<string name="first_name">First Name</string>
 	<string name="last_name">Last Name</string>
 	<string name="email">Email Address</string>
    <string name="dob">Date Of Birth</string>
    <string name="operator">Operator</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="address">Address</string>
    <string name="telecome_circle">Telecome Circle</string>
    <string name="gender">Gender</string>
    <string name="sim_type">Sim Type</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prepaid">Prepaid</string>
    <string name="postpaid">Postpaid</string>
    <string name="headingone">Please Verify Your</string>
    <string name="headingtwo">Mobile No</string>
    <string name="countrycode">91</string>
    <string name="password">Password</string>
    <string name="termsconditions">Term and Condition clause</string>
    <string name="accept">Accept</string>
    <string name="simwarning">if you are using dual sim than prefer to use sim one for registration</string>
    <string name="messagewarning">*Starndered SMS Charges Will Be Applied</string>
    
    
   

</resources>
